syntax = "proto3";

package pt.ulisboa.ist.sirs.contract.enums;

enum Services {
  AuthServer = 0;
  DatabaseServer = 1;
}